--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "1.0.0",
   "main": "app.js",
   "scripts": {
+    "build": "babel app.js -d dist",
     "test:unit": "jest app.test.js",
     "test:integration": "jest tests/integration"
   },
@@ -11,6 +12,9 @@
   "license": "ISC",
   "description": "",
   "devDependencies": {
+    "@babel/cli": "^7.26.4",
+    "@babel/core": "^7.26.0",
+    "@babel/preset-env": "^7.26.0",
     "jest": "^29.7.0"
   },
   "dependencies": {
